fix: fix header mobile horizontal scroll

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
   }
 
   body {
-    @apply scroll-smooth;
+    @apply scroll-smooth overflow-x-hidden;
   }
 
   h1,
